crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_flow__connection_error_expanded_long_details_capped.snap
---
source: src/tests/render_snapshots/connection_flow.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                        ╭ Connection Error ───────────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │✗ Connection failed                                                                                              │                        │
│                        │                                                                                                                 │                        │
│                        │Hint: See details for more information                                                                           │                        │
│                        │                                                                                                                 │                        │
│                        │▼ Details                                                                                                        │                        │
│                        │ERROR line 1: something went wrong in module_1                                                                   │                        │
│                        │ERROR line 2: something went wrong in module_2                                                                   │                        │
│                        │ERROR line 3: something went wrong in module_3                                                                   │                        │
│                        │ERROR line 4: something went wrong in module_4                                                                   │                        │
│                        │ERROR line 5: something went wrong in module_5                                                                   │                        │
│                        │ERROR line 6: something went wrong in module_6                                                                   │                        │
│                        │ERROR line 7: something went wrong in module_7                                                                   │                        │
│                        │ERROR line 8: something went wrong in module_8                                                                   │────────────────────────┘
│                        │ERROR line 9: something went wrong in module_9                                                                   │────────────────────────┐
│                        │ERROR line 10: something went wrong in module_10                                                                 │                        │
│                        │ERROR line 11: something went wrong in module_11                                                                 │                        │
│                        │ERROR line 12: something went wrong in module_12                                                                 │                        │
│                        │ERROR line 13: something went wrong in module_13                                                                 │                        │
│                        │ERROR line 14: something went wrong in module_14                                                                 │                        │
│                        │ERROR line 15: something went wrong in module_15                                                                 │                        │
│                        │ERROR line 16: something went wrong in module_16                                                                 │                        │
│                        │ERROR line 17: something went wrong in module_17                                                                 │                        │
│                        │ERROR line 18: something went wrong in module_18                                                                 │                        │
│                        │ERROR line 19: something went wrong in module_19                                                                 │                        │
│                        │ERROR line 20: something went wrong in module_20                                                                 │                        │
│                        │ERROR line 21: something went wrong in module_21                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │Actions:  e  Re-enter   s  Switch   d  Details   y  Copy                                                         │                        │
│                        ╰ Esc/q to close ─────────────────────────────────────────────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
e:Edit  s:Switch  d:Details  y:Copy  Esc/q:Close
