crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_flow__connection_error_expanded_with_tabs.snap
---
source: src/tests/render_snapshots/connection_flow.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                        ╭ Connection Error ───────────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │✗ Connection failed                                                                                              │                        │
│                        │                                                                                                                 │                        │
│                        │Hint: See details for more information                                                                           │                        │
│                        │                                                                                                                 │────────────────────────┘
│                        │▼ Details                                                                                                        │────────────────────────┐
│                        │psql: error: connection to server at "localhost" (127.0.0.1), port 5433 failed: Connection refused               │                        │
│                        │    Is the server running on that host and accepting TCP/IP connections?                                         │                        │
│                        │                                                                                                                 │                        │
│                        │Actions:  e  Re-enter   s  Switch   d  Details   y  Copy                                                         │                        │
│                        ╰ Esc/q to close ─────────────────────────────────────────────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
e:Edit  s:Switch  d:Details  y:Copy  Esc/q:Close
